config openapi-generator-cli
